WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148599
iOS WebKit2 find-in-page doesn't support multi-line results, is often blank
https://bugs.webkit.org/show_bug.cgi?id=148599
Summary
iOS WebKit2 find-in-page doesn't support multi-line results, is often blank
Tim Horton
Reported
2015-08-28 15:58:00 PDT
iOS WebKit2 find-in-page doesn't support multi-line results, is often blank
Attachments
Patch
(18.48 KB, patch)
2015-08-28 15:59 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-08-28 15:59:03 PDT
Created
attachment 260190
[details]
Patch
Tim Horton
Comment 2
2015-08-31 11:41:07 PDT
http://trac.webkit.org/changeset/189178
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug